# s3-vectors-mcp

./: Makefile  README.md  pyproject.toml
docs/claude/: claude-cli.json  claude-code.json  claude-mcp-add.md
scripts/: mcp_install.py
src/s3_vectors_mcp/: __init__.py  __main__.py  cli.py  config.py  ingest.py  server.py
tests/: test_cli.py  test_config.py  test_ingest.py  test_server_validations.py
