[project]
name = "s3-vectors-mcp"
version = "0.1.3"
description = "A Model Context Protocol server providing tools to interact with AWS S3 Vectors service for embedding and querying vector data"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "moritalous" }]
keywords = ["mcp", "s3vectors", "aws", "bedrock", "vector", "embedding"]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.12.2",
    # embed_text is required; older releases may not expose it
    "s3vectors-embed-cli>=0.1.2",
    "PyPDF2>=3.0.1",
]

[project.scripts]
s3-vectors-mcp = "s3_vectors_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_vectors_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "pytest>=8.3.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.7.3", "pytest>=8.3.0"]
